# TecnicasAdvance_LLMs

Cuestionario_Modulo1/: .gitignore  README.md  app.py  pyproject.toml
Cuestionario_Modulo1/chroma_langchain_db/: chroma.sqlite3
Cuestionario_Modulo1/src/: app.py
Taller2_AgentRAG/: .env  README.md  Taller2_LangChainRAG.txt  app.py  pyproject.toml
Taller3_AutomatizacionN8N/: Cotizacion_Agent.json  Miguel_Daniel_Chat.json  Miguel_Daniel_agente.json
